--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
 </head>
 
 <body>
-  <div class="parte-arriba">
-    <h3>join oun community</h3>
-    <h4>30 day hassle free money garante</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit ea voluptates?</p>
-  </div>
-
-  <div class="parte-abajo">
-    <div class="cuadro-uno">
-      <h3>Monto suscripción</h3>
-      <h4>$29</h4>
-      <h5>por mes</h5>
-      <h6>Acceso completo por solo $10 por dia</h6>
-      <button>Completar</button>
+  <div class="tarjeta">
+    <div class="parte-arriba">
+      <h3>join oun community</h3>
+      <h4>30 day hassle free money garante</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit ea voluptates?</p>
     </div>
-    <div class="cuadro-dos">
-      <h3>Quienes somos</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur dignissimos adipisci possimus deleniti magnam
-        asperiores voluptates libero impedit unde delectus.</p>
+
+    <div class="parte-abajo">
+      <div class="cuadro-uno">
+        <h3>Monto suscripción</h3>
+        <h4>$29</h4>
+        <h5>por mes</h5>
+        <h6>Acceso completo por solo $10 por dia</h6>
+        <button>Completar</button>
+      </div>
+      <div class="cuadro-dos">
+        <h3>Quienes somos</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur dignissimos adipisci possimus deleniti
+          magnam
+          asperiores voluptates libero impedit unde delectus.</p>
+      </div>
     </div>
   </div>
 </body>
