--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="tarjeta">
     <div class="parte-arriba">
-      <h3>join oun community</h3>
+      <h3 class="mostrar-titulo">Join oun community</h3>
       <h4>30 day hassle free money garante</h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit ea voluptates?</p>
     </div>
@@ -19,8 +19,10 @@
     <div class="parte-abajo">
       <div class="cuadro-uno">
         <h3>Monto suscripción</h3>
-        <h4>$29</h4>
-        <h5>por mes</h5>
+        <div class="precio">
+          <h4>$29</h4>
+          <h5>por mes</h5>
+        </div>
         <h6>Acceso completo por solo $10 por dia</h6>
         <button>Completar</button>
       </div>
